--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 	<title></title>
 </head>
 <body>
+	<div id="root"></div>
+	<script src="index.pack.js"></script>
+
 Hello World of React
 </body>
 </html>
